vue btl_show css

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -13,7 +13,7 @@
 @import "./composants/login.css";
 @import "./composants/register.css";
 @import "./composants/liste_celliers.css";
-
+@import "./composants/btl.css";
 
 
 
