--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -14,7 +14,7 @@
 @import "./composants/register.css";
 @import "./composants/liste_celliers.css";
 @import "./composants/btl.css";
-
+@import "./composants/liste-btl.css";
 
 
 
