--- a/public/assets/css/elements/navigation.css
+++ b/public/assets/css/elements/navigation.css
@@ -18,12 +18,13 @@ body {margin:0;}
 footer nav{
   display: flex;
   justify-content: space-between;
-    overflow: hidden;
-    background-color: var(--primary);
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    display: flex;
+  overflow: hidden;
+  background-color: var(--primary);
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  padding:0 var(--espacements-small);
     
 }
 
