--- a/public/assets/css/composants/formBtl.css
+++ b/public/assets/css/composants/formBtl.css
@@ -48,6 +48,7 @@
 .formBtl_form textarea,.formBtl_form select,.formBtl_form input:not([type=file]){
     margin-bottom: var(--espacements-small);
     border-radius: 20px;
+    resize: none;
 }
 .formBtl_form div{
     display: flex;
