--- a/public/assets/css/general.css
+++ b/public/assets/css/general.css
@@ -22,3 +22,10 @@ h1{
 h3{
     font-size: 20px;
   }
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+  display: none;
+}
