traduction de login et autre + changement de png a svg pour icones menu + modification css sur page ajout cellier

--- a/public/assets/css/composants/btn.css
+++ b/public/assets/css/composants/btn.css
@@ -17,5 +17,5 @@
     border: 2px solid  var(--accent);
     padding: var(--espacements-small);
     border-radius: 5px;
-    margin-left: var(--espacements-small);
+    /* margin-left: var(--espacements-small); */
 } 
