--- a/public/assets/css/composants/formCellier.css
+++ b/public/assets/css/composants/formCellier.css
@@ -7,9 +7,19 @@
 
 
 }
-.formCellier h1, .formCellier input[type=text], .formCellier div,.formCellier div a,.formCellier div input {
+.formCellier h1, .formCellier, .formCellier_input input{
     display: flex;
+    margin: auto;
     margin: var(--espacements-small) auto;
     border-radius: 20px;
  
+}
+
+.formCellier_btn{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin: 30px auto;
+    width: 50%;
+    text-align: center;
 }
