debut css  bouteille show blade

--- a/public/assets/css/composants/btl.css
+++ b/public/assets/css/composants/btl.css
@@ -1,4 +1,4 @@
-.btl_head{
+/* .btl_head{
     display: flex;
     justify-content: space-between;
    
@@ -27,7 +27,7 @@
     flex-direction: column;
   
    }
-
+ */
 
 
 
