modal Suppression fonctionnel mais non stylisé

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -18,6 +18,7 @@
 @import "./composants/btn.css";
 @import "./composants/formBtl.css";
 @import "./composants/liste-btl.css";
+@import "./composants/modal.css";
 
 
 
