--- a/public/assets/css/theme.css
+++ b/public/assets/css/theme.css
@@ -2,6 +2,10 @@
 font-family: 'Cinzel', serif;
 font-family: 'Raleway', sans-serif; */
 
+
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500&family=Raleway&display=swap');
+
+
 :root {
 
     /*
@@ -10,7 +14,7 @@ font-family: 'Raleway', sans-serif; */
         --primary: #181818;
         --secondary: white;
         --accent: #7E001E;
-        --accent_fade: #7e001d88;
+        --accent_fade: #7e001d9c;
         --neutral: #D9D9D9;
    
 
@@ -19,7 +23,7 @@ font-family: 'Raleway', sans-serif; */
     */
 
       --font-title: 'Cinzel', serif;
-      --font-ss: 'Raleway', sans-serif;
+      --font-base: 'Raleway', sans-serif;
       
     /*
     Espacements
