--- a/public/assets/css/composants/modal.css
+++ b/public/assets/css/composants/modal.css
@@ -1,4 +1,3 @@
-/* Style du Modal */
 .modal-selector {
     display: none;
     position: fixed;
@@ -9,38 +8,37 @@
     height: 100%;
     overflow: auto;
     background-color: rgba(0,0,0,0.4);
-}
-
-.modal-selector-content {
+  }
+  
+  .modal-selector-content {
     background-color: #fefefe;
     margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
-}
-
-.close {
+  }
+  
+  .close {
     color: #aaa;
     float: right;
     font-size: 28px;
-    font-weight:bold
-}
-
-.close:hover,
-.close:focus {
-  color:black;
-  text-decoration:none;
-  cursor:pointer
-}
-
-.modal-button{
+    font-weight: bold;
+  }
+  
+  .close:hover, .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  .modal-button {
     color: white;
     padding: 15px;
     border-radius: 10px;
     margin: 10px;
-}
-    
-.modal-button-confirm {
+  }
+  
+  .modal-button-confirm {
     background-color: #d64d49;
 }
 
