--- a/public/assets/css/composants/liste_celliers.css
+++ b/public/assets/css/composants/liste_celliers.css
@@ -5,9 +5,14 @@
 
   .liste_celliers .grid__celliers{
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(30%,1fr)) ;
+    grid-template-columns: repeat(auto-fit,minmax(40%,1fr)) ;
     margin:  var(--espacements-medium) 0;
-    grid-gap: var(--espacements-medium);   
+    grid-gap: var(--espacements-small);   
+  }
+
+  .liste_celliers .grid__celliers span{
+    background-color: var(--accent_fade);
+    width: 100%;
   }
 
   .liste_celliers  .header,  .header div {
