--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -19,7 +19,7 @@
 @import "./composants/formBtl.css";
 @import "./composants/liste-btl.css";
 @import "./composants/modal.css";
-
+@import "./composants/carte_commentaire.css";
 
 
 
