--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -28,6 +28,6 @@
 @import "./elements/navigation.css";
 
 /*-------- Import administration ---------*/
-@import "./admin/body_admin.css";
+@import "./admin/general_admin.css";
 @import "./admin/main_admin.css";
 @import "./admin/nav_admin.css";
