--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -20,6 +20,8 @@
 @import "./composants/liste-btl.css";
 @import "./composants/modal.css";
 @import "./composants/carte_commentaire.css";
+@import "./composants/profil.css";
+
 
 
 
