--- a/public/assets/css/composants/btl.css
+++ b/public/assets/css/composants/btl.css
@@ -46,6 +46,9 @@
      margin-left: var(--espacements-medium);
      margin-right: var(--espacements-medium);
    }
+   .btl_carte-body > .liste-btl_img {
+    margin: var(--espacements-x_small) auto;
+  }
 
 
 
