Création de la vue individuelle pour admin\membre, controller fonction show et update en cours

--- a/public/assets/css/admin/main_admin.css
+++ b/public/assets/css/admin/main_admin.css
@@ -1,3 +1,7 @@
+.main_admin {
+    padding-bottom: var(--espacements-large);
+}
+
 .main_admin table {
     max-width: 1000px;
     margin: var(--espacements-large) auto;
