--- a/public/assets/css/composants/modal.css
+++ b/public/assets/css/composants/modal.css
@@ -39,11 +39,15 @@
   }
   
   .modal-button-confirm {
-    background-color: #d64d49;
+    background-color: var(--accent);
 }
 
 .modal-button-cancel {
-    background-color: #88888b;
+  background-color: white;
+  color: black;
+  border: 2px solid  var(--accent);
+  padding: var(--espacements-small);
+  border-radius: 20px;
 }
 
 .containerBoutonsCellier{
