--- a/public/assets/css/composants/modal.css
+++ b/public/assets/css/composants/modal.css
@@ -1,3 +1,67 @@
+.modal{
+  display: flex;
+  flex-direction: column;
+  margin:var(--espacements-medium) auto;
+  background-color: var(--primary_fade);
+ width: 100%;
+ border-radius: 20px;
+ padding: 15px;
+ color: #fefefe;
+ font-size: 18px;
+
+}
+
+.modal div{
+  display: flex;
+
+}
+
+.modal div:first-of-type{
+  text-align: center;
+}
+
+.modal_btn-delete{
+  width: 75%;
+  margin: auto;
+}
+
+.modal_btn-delete .btn-reverse{
+  margin-top:var(--espacements-small);
+}
+
+.modal_confirm-btn  button svg{
+  width: 35px;
+  height: 35px;
+}
+
+.modal_btn-delete .modal .modal_confirm-btn{
+ display: flex;
+ flex-direction: row;
+  margin-top: var(--espacements-small);
+  justify-content: space-between;
+}
+
+.modal_btn-delete .btn-reverse{
+  width: 100%;
+}
+
+.modal_confirm-btn{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal_btn-delete .modal_confirm-btn{
+  display: flex;
+ align-items: center;
+ justify-content: center;
+}
+
+.modal_btn-delete .modal_confirm-btn button{
+  display: flex;
+  width:50%;
+}
+
 .modal-selector {
     display: none;
     position: fixed;
@@ -32,11 +96,13 @@
   }
   
   .modal-button {
-    color: white;
-    padding: 15px;
-    border-radius: 10px;
-    margin: 10px;
-  }
+    display: flex;
+    margin: auto;
+    width: 75%;
+    justify-content: center;
+}
+
+
   
   .modal-button-confirm {
     background-color: var(--accent);
