ajustement css forms edit cellier et user

--- a/public/assets/css/composants/formBtl.css
+++ b/public/assets/css/composants/formBtl.css
@@ -1,3 +1,9 @@
+.formBtl > h1{
+    margin-inline: var(--espacements-medium);
+    text-align: center;
+    margin-bottom: var(--espacements-medium);
+}
+
 .formBtl_section{
     display: flex;
     flex-direction: column;
