--- a/public/assets/css/composants/modal.css
+++ b/public/assets/css/composants/modal.css
@@ -25,9 +25,7 @@
   margin: auto;
 }
 
-.modal_btn-delete .btn-reverse{
-  margin-top:var(--espacements-small);
-}
+
 
 .modal_confirm-btn  button svg{
   width: 35px;
@@ -41,7 +39,7 @@
   justify-content: space-between;
 }
 
-.modal_btn-delete .btn-reverse{
+.modal_btn-delete>.btn-reverse{
   width: 100%;
 }
 
@@ -49,7 +47,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100%;
 }
+
+.modal_confirm-btn .btn{
+  border: 1px solid var(--accent);
+}
+
+
+
 
 .modal_btn-delete .modal_confirm-btn{
   display: flex;
@@ -57,10 +63,10 @@
  justify-content: center;
 }
 
-.modal_btn-delete .modal_confirm-btn button{
+/* .modal_btn-delete .modal_confirm-btn button{
   display: flex;
   width:50%;
-}
+} */
 
 .modal-selector {
     display: none;
