avant nouveau test modal

--- a/public/assets/css/composants/formBtl.css
+++ b/public/assets/css/composants/formBtl.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     margin-bottom: var(--espacements-x_large);
+    align-items: center;
 }
 
 .formBtl_section h1, .formBtl_form h1{ 
