--- a/public/assets/css/elements/navigation.css
+++ b/public/assets/css/elements/navigation.css
@@ -5,8 +5,9 @@ header{
     background-color: var(--accent);
     display: flex;
     justify-content: center;
-
+    position: sticky;
    padding: var(--espacements-small) ;
+   z-index: 10;
 }
 header span svg{
         width: 40px;
@@ -16,6 +17,7 @@ header span svg{
 /*------------------ nav----------------------- */
 
 footer nav{
+  z-index: 10;
   display: flex;
   justify-content: space-between;
   overflow: hidden;
