finition fct modifier qte bouteille avec btn +/-

--- a/public/assets/css/general.css
+++ b/public/assets/css/general.css
@@ -35,6 +35,9 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 
+input[type=number] {
+  -moz-appearance: textfield;
+}
 
 
 details summary::marker {
