--- a/public/assets/css/composants/formBtl.css
+++ b/public/assets/css/composants/formBtl.css
@@ -21,6 +21,15 @@
        padding: 5px;
 }
 
+.modal-SAQ{
+    position: fixed;
+    top: 10%;
+    right: 0;
+    bottom: 7%;
+    left: 0;
+    margin: 30px;
+}
+
 .formBtl_search form input, .formBtl_search form select{
     width: -webkit-fill-available;
     margin-top: 10px;
@@ -38,6 +47,18 @@
 .formBtl_search table{
     border-collapse: separate;
     border-spacing: 5px;
+}
+
+.suggestion_section h1:first-of-type{
+    max-width: max-content;
+}
+
+.modal-SAQ{
+    border: 1px solid #ccc;
+    box-shadow: 2px 2px 6px 0 rgba(0,0,0,.3);
+    background-color: #faebd7;
+    border-radius: 20px;
+    padding: 20px;
 }
 
 .btnWrapper{
