--- a/public/assets/css/composants/formBtl.css
+++ b/public/assets/css/composants/formBtl.css
@@ -25,7 +25,7 @@
     position: fixed;
     top: 10%;
     right: 0;
-    bottom: 7%;
+    bottom: 10%;
     left: 0;
     margin: 30px;
 }
@@ -56,9 +56,10 @@
 .modal-SAQ{
     border: 1px solid #ccc;
     box-shadow: 2px 2px 6px 0 rgba(0,0,0,.3);
-    background-color: #faebd7;
+    background-color: #e6e6e6;
     border-radius: 20px;
     padding: 20px;
+    
 }
 
 .btnWrapper{
