travail sur le deisgn modal pour petits mobiles

--- a/public/assets/css/composants/formBtl.css
+++ b/public/assets/css/composants/formBtl.css
@@ -23,7 +23,7 @@
 
 .modal-SAQ{
     position: fixed;
-    top: 10%;
+    top: 0%;
     right: 0;
     bottom: 10%;
     left: 0;
@@ -33,7 +33,9 @@
 .formBtl_search form input, .formBtl_search form select{
     width: -webkit-fill-available;
     margin-top: 10px;
+    margin-bottom: 10px;
 }
+
 
 .formBtl_search tr{
     padding-top: 30px;
@@ -56,7 +58,7 @@
 .modal-SAQ{
     border: 1px solid #ccc;
     box-shadow: 2px 2px 6px 0 rgba(0,0,0,.3);
-    background-color: #e6e6e6;
+    background-color: var(--neutral);
     border-radius: 20px;
     padding: 20px;
     
