--- a/public/assets/css/composants/modal.css
+++ b/public/assets/css/composants/modal.css
@@ -81,6 +81,13 @@
   display: flex;
  align-items: center;
  justify-content: center;
+ 
+}
+
+.modal-button-confirm{
+  padding: var(--espacements-small);
+  border-radius: 20px;
+
 }
 
 /* .modal_btn-delete .modal_confirm-btn button{
@@ -145,3 +152,4 @@
 .containerBoutonsCellier{
   display: flex;
 }
+
