--- a/public/assets/css/composants/formBtl.css
+++ b/public/assets/css/composants/formBtl.css
@@ -16,15 +16,15 @@
 }
 
 .formBtl_section.suggestion_section h1{
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-block: var(--espacements-small);
+
 }
 
 .formBtl_search{
     position: relative;
     display: inline-block;
-       margin: auto;   
-       padding: 5px;
+    margin: auto;   
+    padding: 5px;
 }
 
 .modal-SAQ{
@@ -141,3 +141,32 @@
 
 }
 
+
+
+.formBtl_file{
+    width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+	z-index: -1;
+}
+
+.formBtl_file + label {
+    font-size: 1.25em;
+    font-weight: 700;
+    color: white;
+    background-color: black;
+    display: inline-block;
+}
+
+.formBtl_ajoutF{
+    width: 25px;
+    display: inline;
+}
+
+.formBtl_ajoutL{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: var(--espacements-small);
+}
